WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150167
Binding generator should allow generating private JS functions
https://bugs.webkit.org/show_bug.cgi?id=150167
Summary
Binding generator should allow generating private JS functions
youenn fablet
Reported
2015-10-15 06:35:58 PDT
JS builtins functions may need getting access to private JS functions implemented through DOM classes. It may be convenient for the binding generator to support this.
Attachments
Patch
(17.95 KB, patch)
2015-10-15 06:44 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(17.97 KB, patch)
2015-10-19 02:57 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2015-10-15 06:44:25 PDT
Created
attachment 263152
[details]
Patch
WebKit Commit Bot
Comment 2
2015-10-15 06:45:49 PDT
Attachment 263152
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/WebCoreJSBuiltins.cpp:30: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 3
2015-10-15 06:47:20 PDT
I used MediaDevices.getUserMedia as an example as it could be readily used for webkitGetUserMedia JS builtin implementation. See
bug 149499
.
youenn fablet
Comment 4
2015-10-15 06:51:59 PDT
See
bug 150166
for another related usecase.
Adam Bergkvist
Comment 5
2015-10-15 06:56:15 PDT
+1 for this feature
Darin Adler
Comment 6
2015-10-18 16:27:21 PDT
Comment on
attachment 263152
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263152&action=review
> Source/WebCore/bindings/scripts/CodeGeneratorGObject.pm:372 > + return 1 if ($function->signature->type eq "Promise");
No need for the parentheses.
> Source/WebCore/bindings/scripts/CodeGeneratorGObject.pm:374 > + return 1 if ($function->signature->type eq "Date");
Ditto.
> Source/WebCore/bindings/scripts/CodeGeneratorGObject.pm:376 > + return 1 if ($function->signature->extendedAttributes->{"JSBuiltin"});
Ditto.
> Source/WebCore/bindings/scripts/CodeGeneratorGObject.pm:378 > + return 1 if ($function->signature->extendedAttributes->{"Private"});
Ditto.
> Source/WebCore/bindings/scripts/CodeGeneratorObjC.pm:550 > + return 1 if ($function->signature->extendedAttributes->{"Private"});
No need for the parentheses.
youenn fablet
Comment 7
2015-10-19 02:57:20 PDT
Created
attachment 263463
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2015-10-19 03:37:22 PDT
Comment on
attachment 263463
[details]
Patch for landing Clearing flags on attachment: 263463 Committed
r191287
: <
http://trac.webkit.org/changeset/191287
>
WebKit Commit Bot
Comment 9
2015-10-19 03:37:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug